--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Parse gutenberg post_content to a React tree",
   "author": "Tom Pallister <tom@threemammals.com>",
-  "homepage": "",
-  "license": "ISC",
+  "homepage": "https://threemammals.com",
+  "license": "MIT",
   "main": "src/index.js",
   "directories": {
     "src": "src",
@@ -19,13 +19,7 @@
   },
   "dependencies": {
     "@wordpress/block-serialization-default-parser": "^3.1.0",
-    "amqplib": "^0.5.3",
-    "cheerio": "^1.0.0-rc.3",
-    "chokidar": "^2.1.5",
-    "image-downloader": "^3.4.2",
-    "object-hash": "^1.3.1",
-    "pg": "^7.9.0",
-    "uuid": "^3.3.2"
+    "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -35,7 +29,6 @@
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "express": "^4.17.1",
     "jest": "^24.7.1"
   }
 }
