--- a/packages/gutenberg-to-react/package.json
+++ b/packages/gutenberg-to-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@threemammals/gutenberg-to-react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Parse gutenberg post_content to a React tree",
   "author": "Tom Pallister <tom@threemammals.com>",
   "homepage": "https://threemammals.com",
@@ -15,13 +15,13 @@
   ],
   "scripts": {
     "lint": "eslint .",
-	"test": "jest --coverage --verbose --detectOpenHandles",
-	"build": "./node_modules/@threemammals/scripts/build.sh"
+    "test": "jest --coverage --verbose --detectOpenHandles",
+    "build": "./node_modules/@threemammals/scripts/build.sh"
   },
   "dependencies": {
+    "@threemammals/scripts": "^0.0.2",
     "@wordpress/block-serialization-default-parser": "^3.1.0",
-	"cheerio": "^1.0.0-rc.3",
-	"@threemammals/scripts": "^0.0.1"
+    "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
