--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "root",
   "scripts": {
-    "build": "./packages/scripts/setup-npmrc.sh && ./packages/scripts/build.sh && ./packages/scripts/teardown-npmrc.sh",
+    "build": "./packages/scripts/build.sh",
     "lerna": "lerna run",
     "bootstrap": "lerna bootstrap",
     "publish": "lerna publish"
