--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,8 @@
-version: 2.1
-
-executors:
-  base:
-    docker:
-      - image: mijitt0m/nuk-api-gateway-build:0.0.5
+version: 2
 jobs:
   build:
-    executor: base
+    docker:
+      - image: circleci/node:10
     steps:
       - add_ssh_keys:
           fingerprints:
@@ -20,10 +16,4 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-            - packages/**/node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-workflows:
-  version: 2
-  build:
-    jobs:
-      - build
