--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@threemammals/scripts",
   "private": false,
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "",
   "author": "Tom Pallister <tom@threemammals.com>",
   "homepage": "https://threemammals.com",
   "license": "MIT",
-  "scripts": {
-  },
+  "scripts": {},
   "gitHead": "59dc9d82ebd22e23b8ac8f1b4e1b7aca7ae27ab0"
 }
